--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -18,6 +18,7 @@ jobs:
           vercel_group: itering
           preview_output: true
           project_name: degov-home
+          dist_path: out
           enable_cache: true
           enable_notify_comment: true
           enable_notify_slack: true
