--- a/.github/workflows/deploy-prd.yml
+++ b/.github/workflows/deploy-prd.yml
@@ -20,6 +20,7 @@ jobs:
           vercel_group: itering
           preview_output: true
           project_name: degov-home
+          dist_path: out
           prod_mode: true
           enable_cache: true
           enable_notify_slack: true
