--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -21,7 +21,7 @@ jobs:
           dist_path: out
           enable_cache: true
           enable_notify_comment: true
-          enable_notify_slack: true
+          enable_notify_slack: false
           slack_channel: public-degov
           slack_webhook: ${{ secrets.SLACK_INCOMING_WEBHOOK_URL }}
 
