--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -21,6 +21,6 @@ jobs:
           project_name: degov-home
           dist_path: out
           enable_cache: true
-          enable_notify_slack: true
+          enable_notify_slack: false
           slack_channel: public-degov
           slack_webhook: ${{ secrets.SLACK_INCOMING_WEBHOOK_URL }}
