--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "@tanstack/react-query": "^5.61.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
